# luaGH

./: Cargo.toml  LICENSE  README.md  luagh.toml
.github/workflows/: ci.yml  luagh-example.yml
crates/luagh-cli/: Cargo.toml
crates/luagh-cli/src/: main.rs  output.rs
crates/luagh-cli/src/commands/: check.rs  explain.rs  init.rs  mod.rs  rules.rs
crates/luagh-config/: Cargo.toml
crates/luagh-config/src/: lib.rs
crates/luagh-core/: Cargo.toml
crates/luagh-core/src/: lib.rs
crates/luagh-diagnostics/: Cargo.toml
crates/luagh-diagnostics/src/: lib.rs
crates/luagh-parser/: Cargo.toml
crates/luagh-parser/src/: lib.rs
crates/luagh-rules/: Cargo.toml
crates/luagh-rules/src/: context.rs  lib.rs  registry.rs  rule.rs
crates/luagh-rules/src/lint/: mod.rs  shadowing.rs  undefined_global.rs  unused_local.rs
crates/luagh-rules/src/naming/: convention.rs  function_case.rs  mod.rs  variable_case.rs
crates/luagh-sarif/: Cargo.toml
crates/luagh-sarif/src/: lib.rs
crates/luagh-sema/: Cargo.toml
crates/luagh-sema/src/: lib.rs  resolver.rs  scope.rs  symbol.rs
tests/fixtures/: basic.lua  naming.lua  unused.lua
