[package]
name = "luagh-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration parsing for LuaGH"

[dependencies]
luagh-core = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
globset = { workspace = true }
