[package]
name = "luagh-rules"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rule engine and built-in rules for LuaGH"

[dependencies]
luagh-core = { workspace = true }
luagh-parser = { workspace = true }
luagh-sema = { workspace = true }
luagh-config = { workspace = true }
full_moon = { workspace = true }
regex = { workspace = true }
